Add forgot & reset password endpoints
