# routes/api.php
@@ -19,6 +19,8 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('auth')->group(function () {
 	Route::post('/register', [AuthController::class, 'register']);
 	Route::post('/login', [AuthController::class, 'login']);
+	Route::post('/forgot-password', [AuthController::class, 'forgotPassword']);
+	Route::post('/reset-password', [AuthController::class, 'resetPassword']);
 	Route::middleware('auth:api')->group(function () {
 		Route::get('/me', [AuthController::class, 'me']);
 		Route::post('/logout', [AuthController::class, 'logout']);
